updates for java10